# TaskTracker

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 055f7184f10b_baseline.py  a9662790b5c4_baseline.py  cdb9f848e0f3_add_projects_table.py  ce3a9bbc6e9e_add_task_table.py
app/: main.py
app/api/: exception_handler.py
app/api/v1/: health.py
app/core/: config.py  database.py  deps.py  exceptions.py
app/projects/: crud.py  exceptions.py  models.py  routes.py  schemas.py
app/tasks/: crud.py  exceptions.py  models.py  routes.py  schemas.py
app/users/: crud.py  exceptions.py  models.py  routes.py  schemas.py
docker/: docker-compose.yaml
tests/: __init__.py  async_factory.py  conftest.py  factories.py  test_placeholder.py
tests/e2e/: helper_functions.py  test_projects.py  test_tasks.py  test_users.py
