[project]
name = "task-tracker-api"
version = "0.1.0"
description = ""
authors = [
    {name = "BuilderCrafter",email = "Aleksa.gb317@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
httpx = "^0.28.1"
ruff = "^0.11.13"
black = "^25.1.0"
mypy = "^1.16.0"
coverage = "^7.9.1"

